<resources>
    <string name="app_name">Simplify For Reddit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subreddits">Subreddits</string>

    <string name="add_subreddit">Add Subreddit</string>
    <string name="subreddit_name">Subreddit name</string>
    <string name="submission_image">Submission thumbnail image</string>
    <string name="remove_subreddit">Remove Subreddit: %s</string>
    <string name="remove_subreddit_desc">Remove Subreddit</string>
    <string name="invitation_title">Simplify For Reddit Invite</string>
    <string name="invitation_message">Try the new Simplify For Reddit app and easily stay current with all of your favorite subreddits</string>

    <string name="title_label">Title</string>
    <string name="text_label">Text</string>
    <string name="author_label">Author</string>
    <string name="created_label">Created</string>
    <string name="subreddit_label">Subreddit</string>
    <string name="total_comments_label">%s total comments</string>
    <string name="comment_label">Comment</string>
    <string name="submission_title">Submission Title</string>

    <string name="read_more">Read more >></string>
    <string name="loading_please_wait">Retrieving submissions, Please wait.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_content_description">Advertisement</string>
</resources>
